--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </p>
     <hr>
     <p>
-	    <strong class="important">Note:</strong> This site is <strong>not</strong> the official version of 2048. You can play the original via <a href="http://git.io/2048">http://git.io/2048.</a> All other apps or sites are derivatives or fakes, and should be used with caution.
+	    <strong class="important">Note:</strong> This site is <strong>not</strong> the official version of 2048. You can play the original via <a href="https://play2048.co">https://play2048.co.</a>
     </p>
     <hr>
     <p>
